--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
    <iframe src="https://embed.plnkr.co/gist/b98556c9eedd735e79a4af043835f909?show=html,css,preview&sidebar=none" frameborder="0"></iframe>
    <a href="https://embed.plnkr.co/gist/b98556c9eedd735e79a4af043835f909?show=html,preview" class="fullscreenlink"> &#10132; &#10065; &nbsp; Open in new window!</a>
 
-    <iframe src="https://embed.plnkr.co/gist/309daa0d20eb003d65a2bbfa4d0500c8?show=html,css,preview&sidebar=none" frameborder="0"></iframe>
-   <a href="https://embed.plnkr.co/gist/309daa0d20eb003d65a2bbfa4d0500c8?show=html,preview" class="fullscreenlink"> &#10132; &#10065; &nbsp; Open in new window!</a>  
+    <iframe src="https://embed.plnkr.co/gist/309daa0d20eb003d65a2bbfa4d0500c8?show=html,preview&sidebar=none" frameborder="0"></iframe>
+   <a href="https://embed.plnkr.co/gist/309daa0d20eb003d65a2bbfa4d0500c8?show=html,css,preview" class="fullscreenlink"> &#10132; &#10065; &nbsp; Open in new window!</a>  
    
 
    
