--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 
    <img src="david-van-den-bor-website.png" alt="David van den Bor" class="logo">
    <section class="intro">
-      <h2> Welcome to my online collection of Code snippets.</h2>
+      <h2> Welcome to my online collection of code snippets</h2>
+      <p>
+         Each Code snippet sits inside a virtual "playground". You can play around with the code, and <strong>previews will update live in the preview window!</strong> You can also open each playground in a new larger window (see black button at the right bottom of each snippet)
 
-      Each Code snippet sits inside a virtual "playground". You can play around with the code, and <strong>previews will update live in the preview window!</strong> You can also open each playground in a new larger window (see black button at the right bottom of each snippet)
-
-      All playgrounds in this repo are hosted at <strong>Github</strong> as Gists, and automatically updated/embedded/pushed to these playgrounds (which are Plunker embeds). <strong>Plunker</strong> is an online community for testing and showcasing user-created HTML, CSS, and JavaScript code snippets!
+         All playgrounds in this repo are hosted on <strong>Github</strong> as Gists, and automatically updated/embedded/pushed to these playgrounds (which are Plunker embeds). <strong>Plunker</strong> is an online community for testing and showcasing user-created HTML, CSS, and JavaScript code snippets! <br>
+         <a href="https://github.com/David-van-den-Bor/code-playground">Playgrounds op Github</a></p>
 
       <a href="https:www.davidvandenbor.nl">www.davidvandenbor.nl</a> <br>
       <a href="https://github.com/David-van-den-Bor">Github</a> |
@@ -37,6 +38,9 @@
    </iframe>
    <a href="https://embed.plnkr.co/github/David-van-den-Bor/tutorial/tutorial-branch?show=html,css,preview" class="fullscreenlink"> &#10132; &#10065; &nbsp; Open in new window!</a> -->
 
+   <iframe src="https://embed.plnkr.co/gist/b98556c9eedd735e79a4af043835f909?show=html,preview&sidebar=none" frameborder="0"></iframe>
+   <a href="https://embed.plnkr.co/gist/b98556c9eedd735e79a4af043835f909?show=html,css,preview" class="fullscreenlink"> &#10132; &#10065; &nbsp; Open in new window!</a>
+
    <iframe src="https://embed.plnkr.co/gist/4dea39195e705081b2a076bed0433c40?show=html,css,preview&sidebar=none" frameborder="0"></iframe>
    <a href="https://embed.plnkr.co/gist/4dea39195e705081b2a076bed0433c40?show=html,preview" class="fullscreenlink"> &#10132; &#10065; &nbsp; Open in new window!</a>
 
@@ -48,6 +52,7 @@
 
    <!-- <iframe src="https://embed.plnkr.co/gist/b98556c9eedd735e79a4af043835f909?sidebar=none&deferRun" frameborder="0" width="100%"></iframe>
    <a href="https://embed.plnkr.co/gist/b98556c9eedd735e79a4af043835f909?show=html,preview" class="fullscreenlink"> &#10132; &#10065; &nbsp; Open in new window!</a> -->
+
 </body>
 
 </html>
