--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
    <img src="david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
    <section class="intro">
-      <h2>Welcome to my <span>playgrounds</span>. An online collection of code snippets</h2>
+      <h2>Welcome to <span>Playground</span>. An online collection of my code snippets</h2>
       <p>
          Each Code snippet sits inside a virtual "playground". You can play
          around with the code, and
