added css grid exercise

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </section>
    </section>
 
-   <iframe src="https://embed.plnkr.co/github/David-van-den-Bor/Event-Listeners-in-Javascript?show=js,preview&sidebar=none" frameborder="0">
+   <iframe src="https://embed.plnkr.co/github/David-van-den-Bor/Event-Listeners-in-Javascript?show=js,preview" frameborder="0">
    </iframe>
    <a href="https://embed.plnkr.co/github/David-van-den-Bor/Event-Listeners-in-Javascript?show=js,preview" class="fullscreenlink">
       &#10132; &#10065; &nbsp; Open in new window!</a>
