--- a/oefening-css-grid/index.html
+++ b/oefening-css-grid/index.html
@@ -5,12 +5,12 @@
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Document</title>
-   <link rel="stylesheet" href="/style.css" />
+   <link rel="stylesheet" href="../style.css" />
 </head>
 
 <body>
 
-   <img src="/david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
+   <img src="../david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
    <section class="intro">
       <h2>CSS grid <span>oefening</span>. <br> Layouten als een baas.</h2>
       <p>
@@ -25,7 +25,7 @@
       <section class="intro">
          <p> En hier is de zandbak die we klaar hebben gezet waar je in kan coderen. Open hem in een nieuw venster, of download hem (het "cloud" ikoontje rechtsbovenin het venster) </p>
 
-         <img src="/plunker.png" style="width:30px" />
+         <img src="../plunker.png" style="width:30px" />
 
       </section>
    </section>
@@ -39,7 +39,7 @@
       <a href="https://github.com/David-van-den-Bor">Github</a> |
       <a href="https://plnkr.co/users/david_van_den_bor/plunks">Plunker</a> |
       <a href="https://codepen.io/davidvdbor/pens/public"> CodePen</a> <br>
-      <img src="/github.png" style="width:50px" />
+      <img src="../github.png" style="width:50px" />
 
    </div>
 
