--- a/oefening-css-grid/index.html
+++ b/oefening-css-grid/index.html
@@ -30,9 +30,9 @@
       </section>
    </section>
 
-   <iframe src="https://embed.plnkr.co/github/David-van-den-Bor/Oefening-css-grid?show=js,preview" frameborder="0">
+   <iframe src="https://embed.plnkr.co/github/David-van-den-Bor/Oefening-css-grid?show=html,preview&sidebar=none" frameborder="0">
    </iframe>
-   <a href="https://embed.plnkr.co/github/David-van-den-Bor/Oefening-css-grid?show=js,preview" class="fullscreenlink">
+   <a href="https://embed.plnkr.co/github/David-van-den-Bor/Oefening-css-grid?show=css,preview" class="fullscreenlink">
       &#10132; &#10065; &nbsp; Open in nieuw venster!</a>
 
    <div class="intro"> <a href="https://github.com/David-van-den-Bor/code-playground">Playgrounds op Github</a> <br>
