changed css styling startpage

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <img src="david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
    <section class="intro">
       <h2>Welcome to <span>Playground</span>. An online collection of my code snippets</h2>
-      <p>
+      <p class="split">
          Each Code snippet sits inside a virtual "playground". You can play
          around with the code, and
          <strong>previews will update live in the preview window!</strong> You
