--- a/oefening-css-grid/index.html
+++ b/oefening-css-grid/index.html
@@ -13,7 +13,7 @@
    <img src="../david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
    <section class="intro">
       <h2>CSS grid <span>oefening</span>. <br> Layouten als een baas.</h2>
-      <p>
+      <p class="split">
          Hier een speelbak om te oefenen met de twee meest gebruikte layout methoden van CSS grid: <strong>grid lines</strong> en <strong>grid areas</strong> Hieronder zie je de afbeelding van de layout die je exact moet namaken. Gebruik de editor daaronder om de code live te typen. Je kunt de editor openen in een nieuw groter venster om te werken.
 
          <p>Dus <strong>deze layout</strong> moet je nabouwen!</p>
