--- a/index.html
+++ b/index.html
@@ -38,11 +38,6 @@
       </section>
    </section>
 
-   <iframe src="https://embed.plnkr.co/github/David-van-den-Bor/Event-Listeners-in-Javascript?show=js,preview" frameborder="0">
-   </iframe>
-   <a href="https://embed.plnkr.co/github/David-van-den-Bor/Event-Listeners-in-Javascript?show=js,preview" class="fullscreenlink">
-      &#10132; &#10065; &nbsp; Open in new window!</a>
-
    <iframe src="https://embed.plnkr.co/gist/b98556c9eedd735e79a4af043835f909?show=html,preview&sidebar=none" frameborder="0"></iframe>
    <a href="https://embed.plnkr.co/gist/b98556c9eedd735e79a4af043835f909?show=html,css,preview" class="fullscreenlink">
       &#10132; &#10065; &nbsp; Open in new window!</a>
@@ -58,6 +53,10 @@
    <iframe src="https://embed.plnkr.co/gist/309daa0d20eb003d65a2bbfa4d0500c8?show=html,preview&sidebar=none" frameborder="0"></iframe>
    <a href="https://embed.plnkr.co/gist/309daa0d20eb003d65a2bbfa4d0500c8?show=html,css,preview" class="fullscreenlink">
       &#10132; &#10065; &nbsp; Open in new window!</a>
+
+   <iframe src="https://codesandbox.io/embed/gist/309daa0d20eb003d65a2bbfa4d0500c8?codemirror=1" style="border-radius: 4px; overflow:hidden;" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"></iframe>
+
+   <iframe src="https://codesandbox.io/embed/github/davidvandenbor/Event-Listeners-in-Javascript?codemirror=1" style="border-radius: 4px; overflow:hidden;" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"></iframe>
 
    <!-- <iframe src="https://embed.plnkr.co/gist/b98556c9eedd735e79a4af043835f909?sidebar=none&deferRun" frameborder="0" width="100%"></iframe>
    <a href="https://embed.plnkr.co/gist/b98556c9eedd735e79a4af043835f909?show=html,preview" class="fullscreenlink"> &#10132; &#10065; &nbsp; Open in new window!</a> -->
