--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
          updated/pushed to the Plunker embeds you see on this page.
          <strong>Plunker</strong> is an online community for testing and
          showcasing user-created HTML, CSS, and JavaScript code snippets! <br />
-         <a href="https://github.com/David-van-den-Bor/code-playground">Playgrounds op Github</a>
+         <a href="https://github.com/davidvandenbor/code-playground">Playgrounds op Github</a>
       </p>
 
       <a href="https:www.davidvandenbor.nl">www.davidvandenbor.nl</a> <br />
-      <a href="https://github.com/David-van-den-Bor">Github</a> |
+      <a href="https://github.com/davidvandenbor">Github</a> |
       <a href="https://plnkr.co/users/david_van_den_bor/plunks">Plunker</a> |
       <a href="https://codepen.io/davidvdbor/pens/public"> CodePen</a>
 
