--- a/oefening-css-media-queries/index.html
+++ b/oefening-css-media-queries/index.html
@@ -35,9 +35,9 @@
    <a href="https://embed.plnkr.co/github/David-van-den-Bor/Oefening-css-grid?show=css,preview" class="fullscreenlink">
       &#10132; &#10065; &nbsp; Open in nieuw venster!</a>
 
-   <div class="intro"> <a href="https://github.com/David-van-den-Bor/code-playground">Playgrounds op Github</a> <br>
+   <div class="intro"> <a href="https://github.com/davidvandenbor/code-playground">Playgrounds op Github</a> <br>
 
-      <a href="https://github.com/David-van-den-Bor">Github</a> |
+      <a href="https://github.com/davidvandenbor">Github</a> |
       <a href="https://plnkr.co/users/david_van_den_bor/plunks">Plunker</a> |
       <a href="https://codepen.io/davidvdbor/pens/public"> CodePen</a> <br>
       <img src="../github.png" style="width:50px" />
