fixed old references old repo name

--- a/oefening-css-grid/index.html
+++ b/oefening-css-grid/index.html
@@ -30,9 +30,9 @@
       </section>
    </section>
 
-   <iframe src="https://embed.plnkr.co/github/David-van-den-Bor/Oefening-css-grid?show=html,preview&sidebar=none" frameborder="0">
+   <iframe src="https://embed.plnkr.co/github.com/davidvandenbor/Oefening-css-grid?show=html,preview&sidebar=none" frameborder="0">
    </iframe>
-   <a href="https://embed.plnkr.co/github/David-van-den-Bor/Oefening-css-grid?show=css,preview" class="fullscreenlink">
+   <a href="https://embed.plnkr.co/github.com/davidvandenbor/Oefening-css-grid?show=css,preview" class="fullscreenlink">
       &#10132; &#10065; &nbsp; Open in nieuw venster!</a>
 
    <iframe src="https://codesandbox.io/embed/github/davidvandenbor/oefening-css-grid?codemirror=1" style="border-radius: 4px; overflow:hidden;" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"></iframe>
