--- a/snippets/event-listeners-in-javascript/index.html
+++ b/snippets/event-listeners-in-javascript/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-   <iframe src="https://embed.plnkr.co/github/David-van-den-Bor/tutorial/tutorial-branch?show=app,html,preview" frameborder="0" width="100%" height="480px">
+   <iframe src="https://embed.plnkr.co/github.com/davidvandenbor/tutorial/tutorial-branch?show=app,html,preview" frameborder="0" width="100%" height="480px">
    </iframe>
    <iframe src="https://embed.plnkr.co/gist/b98556c9eedd735e79a4af043835f909" frameborder="0" width="100%" height="480px"></iframe>
 
