--- a/oefening-css-grid/index.html
+++ b/oefening-css-grid/index.html
@@ -23,19 +23,14 @@
       <img src="grid-exercise.png" alt="">
 
       <section class="intro">
-         <p> En hier is de zandbak die we klaar hebben gezet waar je in kan coderen. Open hem in een nieuw venster, of download hem (het "cloud" ikoontje rechtsbovenin het venster) </p>
+         <p> En hier is de zandbak die we klaar hebben gezet waar je in kan coderen. Open hem in een nieuw venster, om live aan te passen of alles te downloaden</p>
 
          <img src="../plunker.png" style="width:30px" />
 
       </section>
    </section>
 
-   <iframe src="https://embed.plnkr.co/github.com/davidvandenbor/Oefening-css-grid?show=html,preview&sidebar=none" frameborder="0">
-   </iframe>
-   <a href="https://embed.plnkr.co/github.com/davidvandenbor/Oefening-css-grid?show=css,preview" class="fullscreenlink">
-      &#10132; &#10065; &nbsp; Open in nieuw venster!</a>
-
-   <iframe src="https://codesandbox.io/embed/github/davidvandenbor/oefening-css-grid?codemirror=1" style="border-radius: 4px; overflow:hidden;" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"></iframe>
+   <iframe src="https://codesandbox.io/embed/github/davidvandenbor/oefening-css-grid?codemirror=1&fontsize=14&editorsize=30&runonclick=0" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts" class="codesandbox"></iframe>
 
    <div class="intro"> <a href="https://github.com/davidvandenbor/code-playground">Playgrounds op Github</a> <br>
 
