--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
          updated/pushed to the Plunker embeds you see on this page.
          <strong>Plunker</strong> is an online community for testing and
          showcasing user-created HTML, CSS, and JavaScript code snippets! <br />
-         <a href="https://github.com/davidvandenbor/code-playground">Playgrounds op Github</a>
+         <a href="https://github.com/davidvandenbor/playgrounds">Playgrounds on Github</a>
       </p>
 
       <a href="https:www.davidvandenbor.nl">www.davidvandenbor.nl</a> <br />
@@ -42,7 +42,7 @@
 
       <iframe src="https://codesandbox.io/embed/github/davidvandenbor/Event-Listeners-in-Javascript?codemirror=1&fontsize=14&editorsize=30&runonclick=0" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts" class="codesandbox"></iframe>
 
-      <iframe src="https://codesandbox.io/embed/github/davidvandenbor/css-grid-imitating-bootstrap?codemirror=1&fontsize=14&editorsize=30&runonclick=0" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts" class="codesandbox"></iframe>
+      <iframe src="https://codesandbox.io/embed/github/davidvandenbor/oefening-css-navigatie-desktop-mobile?codemirror=1&fontsize=14&editorsize=30&runonclick=0" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts" class="codesandbox"></iframe>
 
       <iframe src="https://embed.plnkr.co/gist/4dea39195e705081b2a076bed0433c40?show=html,css,preview&sidebar=none"></iframe>
       <a href="https://embed.plnkr.co/gist/4dea39195e705081b2a076bed0433c40?show=html,preview" class="fullscreenlink">
