--- a/oefening-css-navigatie-desktop-mobile/index.html
+++ b/oefening-css-navigatie-desktop-mobile/index.html
@@ -33,7 +33,7 @@
             Hangt ervan af. Als je van <em>groot naar klein</em> werkt gebruik je <strong>max-width</strong> (veranderingen TOT maximaal een bepaalde schermbreedte) en als je van <em>klein naar groot</em> werkt (mobile first, zoals wij doen) dan specificeer je <strong>min-width</strong> (veranderingen VANAF minimaal een bepaalde schermbreedte)
          </article>
          <article>
-            <h3>mobile first, css hover en css transition.</h3>
+            <h3>Mobile first, css hover en css transition.</h3>
             <p> We werken van klein naar groot. Dus eerst styleren we de <strong>nav</strong> en de links daarin standaard bovenop elkaar. Daarna maken we de dropdown door handig gebruik te maken van <strong>css hover</strong>. Gecombineerd met <strong>css animaties</strong> (in dit geval css transition) kun je hem dan ook mooi naar beneden en boven laten bewegen. </p>
          </article>
 
@@ -44,19 +44,19 @@
       Speelbak in <strong>CodeSandBox</strong>
    </section>
 
-   <iframe src="https://codesandbox.io/embed/github/davidvandenbor/css-media-queries?codemirror=1&fontsize=14&editorsize=30&runonclick=0" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts" class="codesandbox"></iframe>
+   <iframe src="https://codesandbox.io/embed/github/davidvandenbor/navigation-desktop-mobile?codemirror=1&fontsize=14&editorsize=30&runonclick=0" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts" class="codesandbox"></iframe>
 
    <section class="intro">
       Speelbak in <strong>Plunker</strong>
    </section>
 
-   <iframe src="https://embed.plnkr.co/github/davidvandenbor/css-media-queries?show=html,preview&sidebar=none" frameborder="0">
+   <iframe src="https://embed.plnkr.co/github/davidvandenbor/navigation-desktop-mobile?show=html,preview&sidebar=none" frameborder="0">
    </iframe>
-   <a href="https://embed.plnkr.co/github.com/davidvandenbor/css-media-queries?show=css,preview" class="fullscreenlink">
+   <a href="https://embed.plnkr.co/github/davidvandenbor/navigation-desktop-mobile?show=css,preview" class="fullscreenlink">
       &#10132; &#10065; &nbsp; Open in nieuw venster!</a>
    <footer>
 
-      <section class="intro"> <a href="https://github.com/davidvandenbor/code-playground">Playgrounds op Github</a> <br>
+      <section class="intro"> <a href="https://github.com/davidvandenbor/playgrounds">Playgrounds op Github</a> <br>
 
          <a href="https://github.com/davidvandenbor">Github</a> |
          <a href="https://plnkr.co/users/david_van_den_bor/plunks">Plunker</a> |
