--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-   <img src="david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
+   <img src="README-img/david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
    <section class="intro">
       <h1>Welcome to <span>Playground</span>. An online collection of my code snippets</h1>
       <p class="split">
@@ -32,9 +32,9 @@
       <a href="https://codepen.io/davidvdbor/pens/public"> CodePen</a>
 
       <section class="social">
-         <img src="github.png" alt="" />
-         <img src="plunker.png" alt="" />
-         <img src="codepen.png" alt="" />
+         <img src="README-img/github.png" alt="" />
+         <img src="README-img/plunker.png" alt="" />
+         <img src="README-img/codepen.png" alt="" />
       </section>
    </section>
    <section class="items">
@@ -42,7 +42,7 @@
 
       <iframe src="https://codesandbox.io/embed/github/davidvandenbor/Event-Listeners-in-Javascript?codemirror=1&fontsize=14&editorsize=30&runonclick=0" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts" class="codesandbox"></iframe>
 
-      <iframe src="https://codesandbox.io/embed/github/davidvandenbor/oefening-css-navigatie-desktop-mobile?codemirror=1&fontsize=14&editorsize=30&runonclick=0" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts" class="codesandbox"></iframe>
+      <iframe src="https://codesandbox.io/embed/github/davidvandenbor/navigation-desktop-mobile?codemirror=1&fontsize=14&editorsize=30&runonclick=0" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts" class="codesandbox"></iframe>
 
       <iframe src="https://embed.plnkr.co/gist/4dea39195e705081b2a076bed0433c40?show=html,css,preview&sidebar=none"></iframe>
       <a href="https://embed.plnkr.co/gist/4dea39195e705081b2a076bed0433c40?show=html,preview" class="fullscreenlink">
