--- a/oefening-css-grid/index.html
+++ b/oefening-css-grid/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-   <img src="../david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
+   <img src="README-img/david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
    <section class="intro">
       <h2>CSS grid <span>oefening</span>. <br> Layouten als een baas.</h2>
       <p class="split">
@@ -37,7 +37,7 @@
       <a href="https://github.com/davidvandenbor">Github</a> |
       <a href="https://plnkr.co/users/david_van_den_bor/plunks">Plunker</a> |
       <a href="https://codepen.io/davidvdbor/pens/public"> CodePen</a> <br>
-      <img src="../github.png" style="width:50px" />
+      <img src="/README-img/github.png" style="width:50px" />
 
    </div>
 
