--- a/oefening-css-media-queries/index.html
+++ b/oefening-css-media-queries/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-   <img src="../david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
+   <img src="README-img/david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
    <section class="intro">
       <h1>CSS media queries <span>oefening</span>. <br> verschalen als een baas.</h1>
       <p>
@@ -61,7 +61,7 @@
          <a href="https://plnkr.co/users/david_van_den_bor/plunks">Plunker</a> |
          <a href="https://codepen.io/davidvdbor/pens/public">CodePlayground
             <a href="https://codepen.io/davidvdbor/pens/public"> CodePen</a> <br>
-            <img src="../github.png" style="width:50px" alt="github" />
+            <img src="/README-img/github.png" style="width:50px" alt="github" />
 
       </section>
    </footer>
