--- a/oefening-css-grid/index.html
+++ b/oefening-css-grid/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-   <img src="README-img/david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
+   <img src="/README-img/david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
    <section class="intro">
       <h2>CSS grid <span>oefening</span>. <br> Layouten als een baas.</h2>
       <p class="split">
@@ -25,7 +25,7 @@
       <section class="intro">
          <p> En hier is de zandbak die we klaar hebben gezet waar je in kan coderen. Open hem in een nieuw venster, om live aan te passen of alles te downloaden</p>
 
-         <img src="../plunker.png" style="width:30px" />
+         <img src="/README-img/plunker.png" style="width:30px" />
 
       </section>
    </section>
