--- a/oefening-css-grid/index.html
+++ b/oefening-css-grid/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-   <img src="/README-img/david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
+   <img src="../README-img/david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
    <section class="intro">
       <h2>CSS grid <span>oefening</span>. <br> Layouten als een baas.</h2>
       <p class="split">
