--- a/oefening-css-navigatie-desktop-mobile/index.html
+++ b/oefening-css-navigatie-desktop-mobile/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-   <img src="/README-img/david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
+   <img src="/playgrounds/README-img/david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
    <section class="intro">
       <h1>CSS navigatie <span>maken</span>. <br> Voor desktop EN mobile.</h1>
       <p>
@@ -61,7 +61,7 @@
          <a href="https://github.com/davidvandenbor">Github</a> |
          <a href="https://plnkr.co/users/david_van_den_bor/plunks">Plunker</a> |
          <a href="https://codepen.io/davidvdbor/pens/public"> CodePen</a> <br>
-         <img src="/README-img/github.png" style="width:50px" alt="github" />
+         <img src="/playgrounds/README-img/github.png" style="width:50px" alt="github" />
 
       </section>
    </footer>
