--- a/oefening-html-includes/index.html
+++ b/oefening-html-includes/index.html
@@ -13,10 +13,8 @@
    <img src="/playgrounds/README-img/david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
    <section class="intro">
       <h1>HTML includes <span>oefening</span>. <br> Hergebruik van stukjes code.</h1>
-      <p>
-         Wist je dat je met een paar regeltjes javascript een stukje HTML code (die je heel vaak gebruikt bijvoorbeeld) kunt "importeren" in andere HTML pagina's? Zo kun je dus bijvoorbeeld een navigatiebalk bovenin 30 HTML pagina's plaatsen die afkomstig is van 1 stukje code. Als je het stukje code aanpast van die navigatiebalk, worden automatisch dus ook alle andere pagina's geupdated die dat stukje code hebben geimporteerd. Dat scheelt handmatig dertig pagina's openen om op dertig plekken een navigatiebalk aan te passen.
+      <p>Wist je dat je met een paar regeltjes javascript een stukje HTML code (die je heel vaak gebruikt bijvoorbeeld) kunt "importeren" in andere HTML pagina's? Zo kun je dus bijvoorbeeld een navigatiebalk bovenin 30 HTML pagina's plaatsen die afkomstig is van 1 stukje code. Als je het stukje code aanpast van die navigatiebalk, worden automatisch dus ook alle andere pagina's geupdated die dat stukje code hebben geimporteerd. Dat scheelt handmatig dertig pagina's openen om op dertig plekken een navigatiebalk aan te passen.
       </p> <img src="explanation.png" alt="">
-
    </section>
 
    <section class="intro">
@@ -25,12 +23,11 @@
          <article>
             <h3>Javascript fetch()
             </h3>
-            <p> Het stukje javascript is vrij rechtoe rechtaan. De html pagina wordt opgehaald waar het stukje html code van het menu in zit. Vervolgens wordt in alle pagina's van de website gecheckt of er een navigatiebalkje bovenin staat (<strong>nav</strong>) en zoja, dan wordt het stukje html code daarin geplakt/geimporteerd.</p>
-
+            <p> Het stukje javascript is vrij rechtoe rechtaan. "menu.html" wordt opgehaald (waar het stukje html code van het menu in zit). Vervolgens wordt in alle pagina's van de website gecheckt of er een navigatiebalkje (<strong>nav</strong>) bovenin staat. En zoja, dan wordt "menu.html" (waar het feitelijke menu zit) daarin geplakt/geimporteerd.</p>
          </article>
          <article>
             <h3>Bonus</h3>
-            <p> Als bonus staat in de javascript file ook een stukje code dat een <strong>active</strong> CSS class "plakt" aan menu linkjes uit een navigatiebalk. Het stukje code doet dit door te checken in de adresbalk van de browser of daar de naam van de pagina voorkomt die ook wordt genoemd in de link in het navigatie menu. Als die overeenkomen wordt de class "active" geplakt aan die menulink.</p>
+            <p> Als bonus staat in de javascript file ook een stukje code dat een <strong>active</strong> CSS class "plakt" aan de menu linkjes van de navigatiebalk (zodat ze een oranje kleur krijgen). Het stukje code doet dit door te checken in de adresbalk van de browser of daar de naam van de pagina voorkomt die ook wordt genoemd in de link in het navigatie menu. Als die overeenkomen wordt de class "active" geplakt aan die menulink.</p>
          </article>
 
       </section>
