--- a/oefening-css-grid/index.html
+++ b/oefening-css-grid/index.html
@@ -10,36 +10,38 @@
 
 <body>
 
-   <img src="/playgrounds/README-img/david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
+   <img src="../README-img/david-van-den-bor-website.png" alt="David van den Bor" class="logo" />
    <section class="intro">
-      <h2>CSS grid <span>oefening</span>. <br> Layouten als een baas.</h2>
+      <h1>CSS grid <span>oefening</span>. <br> Layouten als een baas.</h1>
       <p class="split">
-         Hier een speelbak om te oefenen met de twee meest gebruikte layout methoden van CSS grid: <strong>grid lines</strong> en <strong>grid areas</strong> Hieronder zie je de afbeelding van de layout die je exact moet namaken. Gebruik de editor daaronder om de code live te typen. Je kunt de editor openen in een nieuw groter venster om te werken.
+         Hier een speelbak om te oefenen met de twee meest gebruikte layout methoden van CSS grid: <strong>grid lines</strong> en <strong>grid areas</strong> Hieronder zie je de afbeelding van de layout die je exact moet namaken. We hebben ook alvast een code zandbak voor je klaar gezet waar je in kan coderen. Open hem in een nieuw venster, om de code live aan te passen of om de oefening te downloaden als ZIP. Onderaan deze pagina staan ook de twee antwoorden, het codevoorbeeld hoe deze eruit ziet als je grid areas hebt gebruikt en het voorbeeld als je grid lines hebt gebruikt. Maar niet stiekum piepen he! Eerst kijken of het je zelf lukt!
 
-         <p>Dus <strong>deze layout</strong> moet je nabouwen!</p>
+         <p>Dus deze layout moet je nabouwen! <br> Maak een versie met <strong>grid areas</strong> en een versie met <strong>grid lines</strong>!</p>
 
       </p>
 
       <img src="grid-exercise.png" alt="">
 
       <section class="intro">
-         <p> En hier is de zandbak die we klaar hebben gezet waar je in kan coderen. Open hem in een nieuw venster, om live aan te passen of alles te downloaden</p>
 
-         <img src="/playgrounds/README-img/plunker.png" style="width:30px" />
+         <img src="../README-img/plunker.png" style="width:30px" />
 
       </section>
    </section>
 
    <iframe src="https://codesandbox.io/embed/github/davidvandenbor/oefening-css-grid?codemirror=1&fontsize=14&editorsize=30&runonclick=0" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts" class="codesandbox"></iframe>
+   <footer>
+      <p>(Oplossing met grid areas: <a href="https://codesandbox.io/embed/github/davidvandenbor/css-grid-areas?codemirror=1&fontsize=14&editorsize=30&runonclick=0"> hier</a>) |
+         (Oplossing met grid lines: <a href="https://codesandbox.io/embed/github/davidvandenbor/css-grid-lines?codemirror=1&fontsize=14&editorsize=30&runonclick=0"> hier</a>)</p>
+   </footer>
 
-   <div class="intro"> <a href="https://github.com/davidvandenbor/code-playground">Playgrounds op Github</a> <br>
+   <!-- 
+   <div class="intro"> <a href="https://github.com/davidvandenbor/code-playground">Playgrounds op Github</a> <br> -->
 
-      <a href="https://github.com/davidvandenbor">Github</a> |
-      <a href="https://plnkr.co/users/david_van_den_bor/plunks">Plunker</a> |
-      <a href="https://codepen.io/davidvdbor/pens/public"> CodePen</a> <br>
-      <img src="/README-img/github.png" style="width:50px" />
-
-   </div>
+   <!-- <a href="https://github.com/davidvandenbor">Github</a> |
+   <a href="https://plnkr.co/users/david_van_den_bor/plunks">Plunker</a> |
+   <a href="https://codepen.io/davidvdbor/pens/public"> CodePen</a> <br>
+   <img src="/README-img/github.png" style="width:50px" /> -->
 
 </body>
 
