upates in index.html

--- a/oefening-css-grid/index.html
+++ b/oefening-css-grid/index.html
@@ -14,7 +14,7 @@
    <section class="intro">
       <h1>CSS grid <span>oefening</span>. <br> Layouten als een baas.</h1>
       <p class="split">
-         Hier een speelbak om te oefenen met de twee meest gebruikte layout methoden van CSS grid: <strong>grid lines</strong> en <strong>grid areas</strong> Hieronder zie je de afbeelding van de layout die je exact moet namaken. We hebben ook alvast een code zandbak voor je klaar gezet waar je in kan coderen. Open hem in een nieuw venster, om de code live aan te passen of om de oefening te downloaden als ZIP. Onderaan deze pagina staan ook de twee antwoorden, het codevoorbeeld hoe deze eruit ziet als je grid areas hebt gebruikt en het voorbeeld als je grid lines hebt gebruikt. Maar niet stiekum piepen he! Eerst kijken of het je zelf lukt!
+         Hier een speelbak om te oefenen met de twee meest gebruikte layout methoden van CSS grid: <strong>grid lines</strong> en <strong>grid areas</strong> Hieronder zie je de afbeelding van de layout die je exact moet namaken. We hebben ook alvast een code zandbak voor je klaar gezet waar je in kan coderen. Open hem in een nieuw venster, om de code live aan te passen of om de oefening te downloaden als ZIP. Onderaan deze pagina staan ook de twee antwoorden, het codevoorbeeld hoe deze eruit ziet als je grid areas hebt gebruikt en het voorbeeld als je grid lines hebt gebruikt. Niet stiekem spieken hé! Eerst kijken of het je zelf lukt!
 
          <p>Dus deze layout moet je nabouwen! <br> Maak een versie met <strong>grid areas</strong> en een versie met <strong>grid lines</strong>!</p>
 
@@ -31,7 +31,7 @@
 
    <iframe src="https://codesandbox.io/embed/github/davidvandenbor/oefening-css-grid?codemirror=1&fontsize=14&editorsize=30&runonclick=0" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts" class="codesandbox"></iframe>
    <footer>
-      <p>(Oplossing met grid areas: <a href="https://codesandbox.io/embed/github/davidvandenbor/css-grid-areas?codemirror=1&fontsize=14&editorsize=30&runonclick=0"> hier</a>) |
+      <p>Oplossingen hier. Niet stiekem kijken 😊 eerst doen! <br> (Oplossing met grid areas: <a href="https://codesandbox.io/embed/github/davidvandenbor/css-grid-areas?codemirror=1&fontsize=14&editorsize=30&runonclick=0"> hier</a>) |
          (Oplossing met grid lines: <a href="https://codesandbox.io/embed/github/davidvandenbor/css-grid-lines?codemirror=1&fontsize=14&editorsize=30&runonclick=0"> hier</a>)</p>
    </footer>
 
