--- a/oefening-css-grid/index.html
+++ b/oefening-css-grid/index.html
@@ -16,7 +16,7 @@
       <p class="split">
          Hier een speelbak om te oefenen met de twee meest gebruikte layout methoden van CSS grid: <strong>grid lines</strong> en <strong>grid areas</strong> Hieronder zie je de afbeelding van de layout die je exact moet namaken. We hebben ook alvast een code zandbak voor je klaar gezet waar je in kan coderen. Open hem in een nieuw venster, om de code live aan te passen of om de oefening te downloaden als ZIP. Onderaan deze pagina staan ook de twee antwoorden, het codevoorbeeld hoe deze eruit ziet als je grid areas hebt gebruikt en het voorbeeld als je grid lines hebt gebruikt. Niet stiekem spieken hé! Eerst kijken of het je zelf lukt!
 
-         <p>Dus deze layout moet je nabouwen! <br> Maak een versie met <strong>grid areas</strong> en een versie met <strong>grid lines</strong>!</p>
+         <p>Dus deze layout moet nagebouwd worden! <br> Maak een versie met <strong>grid areas</strong> en een versie met <strong>grid lines</strong>!</p>
 
       </p>
 
