--- a/index.html
+++ b/index.html
@@ -41,23 +41,10 @@
       <iframe src="https://codesandbox.io/embed/github/davidvandenbor/css-media-queries?codemirror=1&fontsize=14&editorsize=30&runonclick=0" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts" class="codesandbox"></iframe>
 
       <iframe src="https://codesandbox.io/embed/github/davidvandenbor/Event-Listeners-in-Javascript?codemirror=1&fontsize=14&editorsize=30&runonclick=0" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts" class="codesandbox"></iframe>
-
       <iframe src="https://codesandbox.io/embed/github/davidvandenbor/navigation-desktop-mobile?codemirror=1&fontsize=14&editorsize=30&runonclick=0" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts" class="codesandbox"></iframe>
+<iframe src="https://codesandbox.io/embed/github/davidvandenbor/css-animation-linked-to-scrollbar?codemirror=1&fontsize=14&editorsize=30&runonclick=0" allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr" sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts" class="codesandbox"></iframe>
 
-      <iframe src="https://embed.plnkr.co/gist/4dea39195e705081b2a076bed0433c40?show=html,css,preview&sidebar=none"></iframe>
-      <a href="https://embed.plnkr.co/gist/4dea39195e705081b2a076bed0433c40?show=html,preview" class="fullscreenlink">
-         &#10132; &#10065; &nbsp; Open in new window!</a>
 
-      <iframe src="https://embed.plnkr.co/gist/248d1d5f64456565365ca51ce2634e63?show=html,css,preview&sidebar=none"></iframe>
-      <a href="https://embed.plnkr.co/gist/b98556c9eedd735e79a4af043835f909?show=html,preview" class="fullscreenlink">
-         &#10132; &#10065; &nbsp; Open in new window!</a>
-
-      <iframe src="https://embed.plnkr.co/gist/309daa0d20eb003d65a2bbfa4d0500c8?show=html,preview&sidebar=none"></iframe>
-      <a href="https://embed.plnkr.co/gist/309daa0d20eb003d65a2bbfa4d0500c8?show=html,css,preview" class="fullscreenlink">
-         &#10132; &#10065; &nbsp; Open in new window!</a>
-
-      <!-- <iframe src="https://embed.plnkr.co/gist/b98556c9eedd735e79a4af043835f909?sidebar=none&deferRun"  width="100%"></iframe>
-   <a href="https://embed.plnkr.co/gist/b98556c9eedd735e79a4af043835f909?show=html,preview" class="fullscreenlink"> &#10132; &#10065; &nbsp; Open in new window!</a> -->
    </section>
 </body>
 
